src/test/ui/consts/assume-type-intrinsics.stderr
error: any use of this value will cause an error
  --> $DIR/assume-type-intrinsics.rs:11:9
   |
LL | /     const _BAD: () = unsafe {
LL | |         MaybeUninit::<!>::uninit().assume_init();
   | |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ aborted execution: attempted to instantiate uninhabited type `!`
LL | |     };
   | |______-
   |
   = note: `#[deny(const_err)]` on by default
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>

error: aborting due to previous error

